Add git to npm/Dockerfile
Signed-off-by: Jerry Trieu <jerry@advancedtelematic.com>

--- a/npm/Makefile
+++ b/npm/Makefile
@@ -1,8 +1,11 @@
+.PHONY: build push
+.DEFAULT_GOAL := build
+
 REPOSITORY=advancedtelematic/npm
-VERSION=0.1.0-webpack
+VERSION=0.1.1-webpack
 
 build:
 	docker build -t $(REPOSITORY):$(VERSION) .
 
-push:
+push: build
 	docker push $(REPOSITORY):$(VERSION)
