--- a/npm/Dockerfile
+++ b/npm/Dockerfile
@@ -1,5 +1,5 @@
 FROM node:10-alpine
 VOLUME /app
 WORKDIR /app
-RUN apk --no-cache add git
-RUN npm install -g webpack jest
+RUN apk --no-cache add git g++ make python
+RUN npm install --global webpack webpack-cli jest
